<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/surfaceColor"
        app:liftOnScroll="false"
        app:liftOnScrollColor="@android:color/transparent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingtoolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_app_bar_height"
            style="@style/Widget.Accord.CollapseToolbar"
            app:contentScrim="@android:color/transparent"
            app:collapsedTitleGravity="center"
            app:title="@string/bottom_nav_browse">

            <!-- Hint: Manually aligned-->
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height"
                style="@style/Widget.Accord.MaterialToolbar"
                app:menu="@menu/menu_browse"
                android:paddingStart="62dp"
                android:paddingEnd="10dp" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tablayout_height"
            android:background="@android:color/transparent"
            android:layout_marginBottom="@dimen/tablayout_bottom_margin"
            app:tabBackground="@android:color/transparent"
            app:tabIndicator="@drawable/selected_chip_background"
            app:tabIndicatorColor="@color/accentColor"
            app:tabIndicatorFullWidth="true"
            app:tabIndicatorGravity="stretch"
            app:tabMinWidth="0dp"
            app:tabMode="scrollable"
            app:tabGravity="start"
            app:tabPaddingEnd="12dp"
            app:tabPaddingStart="12dp"
            app:tabContentStart="36dp"
            app:tabRippleColor="@color/accentColorFainted"
            app:tabSelectedTextColor="@color/onAccentColor"
            app:tabTextColor="@color/onSurfaceColor"
            app:tabTextAppearance="@style/Widget.Accord.Main.Browse.TabLayout">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_songs" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_albums" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_artists" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_genres" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_dates" />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/browse_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>