<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@color/setupWizardSurfaceColor">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/need_permissions"
        android:fontFamily="@font/inter_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="21.5dp"
        app:layout_constraintVertical_bias="0.15"
        android:textSize="34sp"
        android:includeFontPadding="false"
        android:textColor="@color/onSurfaceColor"
        />

    <TextView
        android:id="@+id/explanation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/permission_title_desc"
        android:includeFontPadding="false"
        android:textColor="@color/onSurfaceColorInactive"
        android:textSize="17sp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/general_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        style="?materialCardViewFilledStyle"
        app:cardBackgroundColor="@color/setupWizardCardColor"
        app:cardElevation="0dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="@id/explanation"
        app:layout_constraintEnd_toEndOf="@id/explanation"
        app:layout_constraintTop_toBottomOf="@id/explanation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/storage_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/folder_ic"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_folder"
                    app:tint="@color/onAccentColor"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/Widget.Accord.SetupWizard.PermissionPage.Icon"
                    android:background="@drawable/ic_launcher_background"
                    />

                <TextView
                    android:id="@+id/storage_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/storage"
                    android:textSize="19sp"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/inter_semibold"
                    android:textColor="@color/onSurfaceColor"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toTopOf="@id/folder_ic"
                    app:layout_constraintStart_toEndOf="@id/folder_ic"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/storage_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/folder_ic"
                    app:layout_constraintEnd_toStartOf="@id/storage_apply_btn"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="15sp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/storage_desc"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/storage_apply_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="0dp"
                    android:minWidth="72dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    app:cornerRadius="24dp"
                    android:text="@string/allow"
                    android:checkable="true"
                    app:toggleCheckedStateOnClick="false"
                    android:textColor="@color/cl_ask_perm_text"
                    style="@style/Widget.Accord.SetupWizard.PermissionPage.AskButton"
                    app:backgroundTint="@color/cl_ask_perm_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="18dp"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/music_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/music_ic"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_note"
                    app:tint="@color/onAccentColor"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/Widget.Accord.SetupWizard.PermissionPage.Icon"
                    android:background="@drawable/ic_launcher_background"
                    />

                <TextView
                    android:id="@+id/music_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/music"
                    android:textSize="19sp"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/inter_semibold"
                    android:textColor="@color/onSurfaceColor"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toTopOf="@id/music_ic"
                    app:layout_constraintStart_toEndOf="@id/music_ic"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/music_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/music_ic"
                    app:layout_constraintEnd_toStartOf="@id/music_apply_btn"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="15sp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/storage_desc"
                    />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/music_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:dividerThickness="0.25dp"
                    android:alpha="0.5"
                    app:dividerColor="@color/bottomNavigationDividerColor"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/music_apply_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="0dp"
                    android:minWidth="72dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    app:cornerRadius="24dp"
                    android:text="@string/allow"
                    android:checkable="true"
                    app:toggleCheckedStateOnClick="false"
                    android:textColor="@color/cl_ask_perm_text"
                    style="@style/Widget.Accord.SetupWizard.PermissionPage.AskButton"
                    app:backgroundTint="@color/cl_ask_perm_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="18dp"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/photo_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/photo_ic"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_album_stack"
                    app:tint="@color/onAccentColor"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/Widget.Accord.SetupWizard.PermissionPage.Icon"
                    android:background="@drawable/ic_launcher_background"
                    />

                <TextView
                    android:id="@+id/photo_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Album"
                    android:textSize="19sp"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/inter_semibold"
                    android:textColor="@color/onSurfaceColor"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toTopOf="@id/photo_ic"
                    app:layout_constraintStart_toEndOf="@id/photo_ic"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/photo_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/photo_ic"
                    app:layout_constraintEnd_toStartOf="@id/album_apply_btn"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="15sp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/album_desc"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/album_apply_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="0dp"
                    android:minWidth="72dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    app:cornerRadius="24dp"
                    android:text="@string/allow"
                    android:checkable="true"
                    app:toggleCheckedStateOnClick="false"
                    android:textColor="@color/cl_ask_perm_text"
                    style="@style/Widget.Accord.SetupWizard.PermissionPage.AskButton"
                    app:backgroundTint="@color/cl_ask_perm_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="18dp"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/general_card"
        app:layout_constraintStart_toStartOf="@id/general_card"
        app:layout_constraintEnd_toEndOf="@id/general_card"
        android:text="@string/album_cover_special_desc"
        android:includeFontPadding="false"
        android:textColor="@color/onSurfaceColorInactive"
        android:textSize="17sp"
        android:layout_marginTop="22dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>